Implemented TulipApi main method to generate Java sample benchmark